Update README.md
增加JVM启动参数参考